--- a/templates/base.html
+++ b/templates/base.html
@@ -64,7 +64,7 @@
   </header>
   <!-- ***** Header Area End ***** -->
 
-  {% block 'body' %}{% endblock %}
+  {% block body %}{% endblock body %}
 
     <!-- Scripts -->
   <!-- Bootstrap core JavaScript -->
