--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
-    <title>Mexant - Financial HTML5 Template</title>
+    <title>Financial Template</title>
 
     <!-- Bootstrap core CSS -->
     <link href="{{ url_for('static', filename='vendor/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
@@ -64,7 +64,7 @@
   </header>
   <!-- ***** Header Area End ***** -->
 
-  {% block body %}{% endblock body %}
+  {% block content %}{% endblock %}
 
     <!-- Scripts -->
   <!-- Bootstrap core JavaScript -->
